--- a/components/navbar.html
+++ b/components/navbar.html
@@ -6,7 +6,7 @@
         <div class="search-container">
             <input type="text" class="search-input d-none d-md-block" placeholder="¿ QUÉ ESTAS BUSCANDO ?">
         </div>
-        <div class="flex gap-2">
+        <div id="navButtons" class="flex gap-2">
             <button class="btn search-btn d-md-none" data-bs-toggle="modal" data-bs-target="#searchModal">
                 <img width="25" height="25" src="assets/icons/buscador.svg" alt="search icon">
             </button>
