--- a/components/carousel.html
+++ b/components/carousel.html
@@ -1,12 +1,12 @@
-<div id="carouselExampleIndicators" class="carousel slide">
+<div id="arbellCarousel" class="carousel slide">
     <div class="carousel-indicators"></div>
     <div class="carousel-inner"></div>
-    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
+    <button class="carousel-control-prev" type="button" data-bs-target="#arbellCarousel"
         data-bs-slide="prev">
         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
         <span class="visually-hidden">Previous</span>
     </button>
-    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
+    <button class="carousel-control-next" type="button" data-bs-target="#arbellCarousel"
         data-bs-slide="next">
         <span class="carousel-control-next-icon" aria-hidden="true"></span>
         <span class="visually-hidden">Next</span>
