--- a/css/navbar/styles.css
+++ b/css/navbar/styles.css
@@ -118,3 +118,24 @@
   display: flex;
   align-items: center;
 }
+
+@media (min-width: 1199px) {
+  .container-fluid > .navbar-brand > img,
+  .container-fluid > #navButtons > button > img {
+    width: 50px;
+    height: 50px;
+  }
+  .offcanvas-menu{
+    width: 550px;
+    font-size: 20px;
+  }
+  .menu-items > ul > li > a{
+    font-size: 25px;
+  }
+  .menu-items > ul{
+    display: flex;
+    flex-direction: column;
+    margin-top: 2rem;
+    gap: 1rem;
+  }
+}
